# jhana-rs

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  config.json.example
audio/voice-cloning/: SOURCE.md
config/: jhana.json  pi-models.json
docs/: 00_HARDWARE.md  01_DEV_SETUP.md  02_LLM.md  03_TTS.md  04_STT.md  05_NPU.md  06_KERNEL.md  07_IMAGE.md  08_DISPLAY.md  09_AUDIO.md  10_SPECS.md  11_BENCHMARKS.md  12_TROUBLESHOOTING.md  13_SKILLS.md  14_TODO.md  15_INTERACTION.md  16_AGENT.md  17_DISPLAY.md  18_SLINT.md  BENCHMARKS.md  SKILLS.md  SPECS.md  TODO.md  TROUBLESHOOTING.md
docs/meditation_examples_raw/: 02_Metta_Flowergarden.txt  03_Metta_Lotusflower.txt  06_Metta_Serving Soup.txt  07_Metta_Sun.txt  08_Metta_Fountain of Love.txt  09_Metta_Lake of your heart.txt  19910103-Ayya_Khema-UNK-guided_fan_meditation-8000.txt  19950711-Ayya_Khema-KA-flower_garden-7981.txt  19950711-Ayya_Khema-KA-forgiveness-7982.txt  19950711-Ayya_Khema-KA-lotus_flower-7985.txt  19950711-Ayya_Khema-KA-sun_in_your_heart-7991.txt  19960629-Ayya_Khema-GGZ-lotus-7986.txt  19960708-Ayya_Khema-GGZ-fountain_of_love-7983.txt  20190828-Leigh_Brasington-TSD-guided_metta_soup_sharing-64197.txt  Flower Garden.txt  Forgiveness, Gratitude, Relaxation & Enjoyment.txt  Forgiveness.txt  Metta%20flowers.txt  Metta%20fountain%20of%20love%20droplets.txt  Metta%20soup%20sharing.txt  Patience - Finding Comfort.txt  Patience - What am I missing.txt  Spacious Love.txt  Sunny Canyon.txt  lb_mettaflowers_20140827.txt
hardware/: jhana-rs-kmscon.service  jhana-rs-slint.service  jhana-rs.service  kmscon.conf
hardware/uctronics-audio/: .gitignore  Makefile  snd-soc-uctronics-codec.c  uctronics-audio-overlay.dts
hardware/uctronics-dsi/: Makefile  README.md  dsi-panel-node.dts  ili9881c-init-dump.hex  ili9881c-init-extracted.c  ili9881c-init-sequence.c  jd9365da-init-sequence.c  panel-ilitek-ili9881c.c  panel-init-sequence.txt  panel-jadard-jd9365da-h3.c  panel-uctronics-lcd.c  radxa-ubuntu-22.04-full.dts  rock-5a-uctronics-dsi.dts
prompts/: agent_system.txt  system.txt
prompts/agent_skills/: breath_awareness.md  inquiry.md  jhana_qa.md  loving_kindness.md  repair.md
prompts/meditations/: flower_garden.txt  fountain_of_love.txt  lake_of_your_heart.txt  lotus_flower.txt  serving_soup.txt  sun_in_your_heart.txt  test.txt
scripts/: armbian-headless-setup.sh  cleanup-r.sh  moonshine_tts_worker.py  pre-commit  rock-bench-llm.sh  rock-build-sherpa-rknn.sh  rock-build.sh  rock-demo-record.sh  rock-demo-stop.sh  rock-deploy.sh  rock-kmscon-setup.sh  rock-log.sh  rock-run.sh  rock-ssh.sh  rock-stats.sh  rock-stop.sh  rock-sync.sh  rock-test-npu.sh  rock-test-rkllm.sh  test-audio-in.sh  test-audio-out.sh  test-stt-tts.sh
src/: agent_loop.rs  config.rs  gpio.rs  llm.rs  main.rs  openai_types.rs  stt.rs  tts.rs  ui.rs
tests/: ui_test.rs
ui/: jhana.slint
