[package]
name = "jhana-rs"
version = "0.1.0"
edition = "2024"
description = "Voice-driven meditation guide for Radxa Rock 5A (aarch64)"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
log = "0.4"
simplelog = "0.12"
signal-hook = "0.3"
serde_json = "1"
sensevoice-rs = { version = "0.1.7", features = ["rknpu"] }
rkllm-rs = "0.1.14"

[lints.rust]
# Relaxed from "forbid" to "warn" because sherpa-onnx uses unsafe FFI.
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
