[package]
name = "jhana-rs"
version = "0.1.0"
edition = "2024"
description = "Voice-driven meditation guide for Radxa Rock 5A (aarch64)"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
# Note: tui-big-text was tried for "big text" rendering but its
# unicode-quadrant glyphs render as decorative shapes (not pixels) on
# a Linux TTY console — the font is fixed at 32×16 px per char and
# can't be scaled. Emphasis is now achieved through whitespace +
# centred alignment + bold instead. See src/ui.rs render_focal_card.
log = "0.4"
simplelog = "0.12"
signal-hook = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sensevoice-rs = { version = "0.1.7", features = ["rknpu"] }
rkllm-rs = "0.1.14"

# Server-only deps (pulled in for the `jhana-llm-server` binary that
# wraps rkllm-rs behind an OpenAI-compatible HTTP endpoint for pi).
# Kept as required deps rather than features for now — the size cost
# on the main TUI binary is small and `pi-port` is experimental.
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
tower = "0.5"
uuid = { version = "1", features = ["v4"] }

[lints.rust]
# Relaxed from "forbid" to "warn" because sherpa-onnx uses unsafe FFI.
unsafe_code = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Size-optimised release profile. The binary sits resident in RAM the
# whole time the cyberbox is on, so trimming code size is a direct
# RAM win in addition to faster cold start. Compile time is longer
# (single codegen unit + fat LTO) but the Rock is bandwidth-bound,
# not throughput-bound, so size > speed at the margin.
[profile.release]
opt-level = "z"     # optimise for binary size, not speed
lto = "fat"         # whole-program optimisation
codegen-units = 1   # let LLVM see everything for inlining/dead-code elim
strip = "symbols"   # drop debug symbols from the final binary
panic = "abort"     # no unwind tables; we don't catch_unwind anywhere
